# rust_ai

./: .gitignore
burn-example/: Cargo.toml
burn-example/src/: main.rs
video_11_llm-chain/: Cargo.toml
video_11_llm-chain/src/: main.rs
video_12_cli/: Cargo.toml
video_12_cli/buddy/: buddy.toml  instructions.md
video_12_cli/src/: main.rs
video_12_cli/src/ais/: asst.rs  mod.rs  msg.rs
video_12_cli/src/buddy/: config.rs  mod.rs
video_12_cli/src/utils/: files.rs  mod.rs
video_13_chat/: Cargo.toml  README.md
video_13_chat/src/: api.rs  app.rs  lib.rs  main.rs
video_13_chat/src/app/components/: chat_area.rs  type_area.rs
video_13_chat/src/model/: conversation.rs
video_14_NN/: Cargo.toml
video_14_NN/src/: lib.rs  main.rs
video_15_pytorch/: Cargo.toml
video_15_pytorch/src/: main.rs
video_17_bert/: Cargo.toml
video_17_bert/src/: main.rs
video_18_CG/: Cargo.toml
video_18_CG/src/: lib.rs
video_19_mistral/: Cargo.toml
video_19_mistral/backend/: Cargo.toml
video_19_mistral/backend/src/: lib.rs  main.rs
video_19_mistral/backend/src/models/: mistral7b.rs  mod.rs
video_19_mistral/frontend/: Cargo.toml  README.md
video_19_mistral/frontend/src/: app.rs
video_1_ollama/: Cargo.toml
video_1_ollama/examples/: c01-simple.rs  c02-context.rs  c03-chat.rs  c04-embeddings.rs
video_1_ollama/src/: lib.rs
video_21_LA/: Cargo.toml
video_21_LA/src/: lib.rs
video_2_ai_fc/: Cargo.toml
video_2_ai_fc/examples/: simple_example.rs
video_2_ai_fc/src/: chat.rs  conv.rs  error.rs  gpts.rs  lib.rs  oa_client.rs
video_2_ai_fc/src/tools/: ai_tools.rs  currency.rs  mod.rs  spec.rs
video_2_ai_fc/src/utils/: mod.rs  x_value.rs
video_3_dt/: Cargo.toml
video_3_dt/src/: lib.rs  main.rs  utils.rs
video_4_kalosm/: Cargo.toml
video_4_kalosm/src/: main.rs
video_6_genai/: Cargo.toml
video_6_genai/src/: main.rs
wasm_ai/: Cargo.toml  install_wasmedge.sh  run.sh  unused_run.sh
wasm_ai/crates/: out.txt
wasm_ai/crates/core/: Cargo.toml
wasm_ai/crates/core/src/: lib.rs
wasm_ai/crates/prepare/: Cargo.toml
wasm_ai/crates/prepare/src/: main.rs
wasm_ai/crates/runner/: Cargo.toml
wasm_ai/crates/runner/src/: main.rs
wasm_ai/crates/wasm_core/: Cargo.toml
wasm_ai/crates/wasm_core/src/: main.rs
wasm_ai/crates/wasm_core/src/model/: mod.rs  structs.rs
wasm_ai/front/: index.html
