[package]
name = "video_12_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = "0.28.3"
console = "0.15.11"
derive_more = { version = "2.0.1", features = ["from", "display", "deref"] }
globset = "0.4.16"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
walkdir = "2.5.0"
textwrap = "0.16.2"
