[package]
name = "video_2_ai_fc"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-openai = "0.28.1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_with = { version = "3", features = ["macros"] }
rpc-router = "=0.1.3"
schemars = "0.8"
derive_more = { version = "2", features = ["from", "display"] }
dotenv = "0.15.0"
