[workspace]
resolver = "1"
members = ["crates/wasm_core", "crates/runner", "crates/prepare"]

[workspace.package]
name = "wasm_ai"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde = "1.0"
tokio = { version = "1", features = ["macros", "rt", "time"] }
wasmtime = { version = "35.0.0", features = ["async"] }
