[package]
name = "backend"
version.workspace = true
edition.workspace = true

[dependencies]
candle-core = {version = "0.9.1",features = ["metal"]}
candle-examples = "0.9.1"
candle-transformers = {version = "0.9.1", features = ["metal"]}
futures = "0.3.31"
hf-hub = { version = "0.4.3", features = ["tokio"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokenizers = { version = "0.21.2", features = ["hf-hub"] }
tokio = { version = "1.46.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
