[package]
name = "core"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "core_bin"
path = "src/main.rs"

[dependencies]
tokio = { version = "^1.36", features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
] }
once_cell = "1.18"
wasmedge-wasi-nn = "0.8.0"
bytemuck = "1.23.1"
serde_json = "1.0.142"
serde = { version = "1.0.219", features = ["derive"] }
